--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style/web.css">
+    <script src="https://kit.fontawesome.com/27841d8aae.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -29,8 +30,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
 
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
@@ -98,7 +99,7 @@
 
         </section>
         <section>
-            <h3 class="summary-resume">A summary of My Resume</h3>
+            <h3 class="summary-resume" style="text-align: center;" >A summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
@@ -163,7 +164,7 @@
             </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download-CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download-CV</button>
             </div>
         </section>
 
@@ -180,6 +181,12 @@
             <h3 class="section-title">
                 Let’s Message me
             </h3>
+            <form class="contact-form" action="">
+                <input type="text" name="" placeholder="Your name" id="">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message" ></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
         </div>
 
 
